docs: expand CLAUDE.md with versions, configuration pattern, samples guide, troubleshooting